# mechaship

./: .gitmodules  README.md
mechaship_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mechaship_bringup/hooks/: mechaship_bringup.sh.in
mechaship_bringup/launch/: mechaship_bringup.launch.py  mechaship_lidar.launch.py
mechaship_bringup/param/: camera_info.yaml  mechaship_actuator.yaml  mechaship_camera.yaml  mechaship_gps.yaml  mechaship_imu.yaml  mechaship_lidar.yaml  ntrip_info.yaml
mechaship_bt/: package.xml  setup.cfg  setup.py
mechaship_bt/bt/: actions.py  conditions.py
mechaship_bt/mechaship_bt/: bt_node.py  sensors.py
mechaship_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mechaship_description/launch/: mechaship_description_rviz.launch.py  mechaship_state_publisher.launch.py
mechaship_description/meshes/: ydlidar_x4.stl
mechaship_description/models/mechaship/: model.config  model.sdf
mechaship_description/models/mechaship/meshes/: CAMERA.stl  KEY.stl  LiDAR.stl  THRUSTER.stl  rpi_camera_v2.stl
mechaship_description/rviz/: monitor_mechaship.rviz
mechaship_description/urdf/: mechaship.urdf.xacro
mechaship_image/: package.xml  setup.cfg  setup.py
mechaship_image/launch/: mechaship_image.launch.py
mechaship_image/mechaship_image/: mechaship_image_color_node.py  mechaship_image_sub_node.py
mechaship_interfaces/: CMakeLists.txt  package.xml
mechaship_interfaces/action/: Key.action  Thruster.action
mechaship_interfaces/msg/: Classification.msg  ClassificationArray.msg  Detection.msg  DetectionArray.msg  RgbwLedColor.msg  ToneTopic.msg
mechaship_interfaces/srv/: ActuatorEnable.srv  Tone.srv
mechaship_simulation/: CMakeLists.txt  package.xml
mechaship_simulation/launch/: gazebo.launch.py  spawn.launch.py
mechaship_simulation/param/: mechaship_bridge.yaml  mechaship_gui.config
mechaship_simulation/scripts/: respawn_manager_node.py
mechaship_simulation/worlds/: empty.world  mechaship_arena.world  training_arena.world
mechaship_slam/: CMakeLists.txt  package.xml
mechaship_slam/config/: mechaship.lua  slam_toolbox.yaml
mechaship_slam/launch/: cartographer.launch.py  cartographer_rviz.launch.py  ekf.launch.py  slam_toolbox.launch.py
mechaship_slam/param/: ekf.yaml  navsat_transform.yaml  slam_toolbox.yaml
mechaship_slam/rviz/: mechaship_cartographer.rviz
mechaship_system/: package.xml  setup.cfg  setup.py
mechaship_system/launch/: mechaship_system_actuator_enable.launch.py  mechaship_system_service.launch.py
mechaship_system/mechaship_system/: actuator_enable_node.py  service_node.py
mechaship_system/param/: actuator.yaml  service.yaml
mechaship_teleop/: package.xml  setup.cfg  setup.py
mechaship_teleop/launch/: mechaship_teleop_joystick.launch.py
mechaship_teleop/mechaship_teleop/: mechaship_teleop_joystick.py  mechaship_teleop_keyboard.py
mechaship_yolov8/: package.xml  setup.cfg  setup.py
mechaship_yolov8/launch/: detect.launch.py  visualize.launch.py
mechaship_yolov8/mechaship_yolov8/: detect_node.py  rknn_helper.py  visualize_node.py
mechaship_yolov8/param/: yolov8_params.yaml
mechaship_yolov8/utils/: rknn_helper.py
