<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mechaship_bringup</name>
  <version>1.0.0</version>
  <description>ROS 2 launch files to initialize and run Mechaship.</description>
  <maintainer email="techms5499@gmail.com">Mechasolution</maintainer>
  <license>Apache-2.0</license>
  <author email="max@mechasolution.com">Max Cha</author>

  <!-- Buildtool Dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Other ROS package dependencies -->
  <exec_depend>mechaship_system</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>iahrs_ros2_driver</exec_depend>
  <exec_depend>mechaship_description</exec_depend>
  <exec_depend>wtrtk_ros2_driver</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>ntrip_client</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>