<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mechaship_slam</name>
  <version>1.0.0</version>
  <description>ROS 2 launch scripts for SLAM</description>
  <maintainer email="techms5499@gmail.com">Mechasolution</maintainer>
  <license>Apache 2.0</license>
  <author email="sydney@mechasolution.com">Sydney Kim</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>