<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mechaship_system</name>
  <version>1.0.0</version>
  <description>mechaship background package</description>
  <maintainer email="techms5499@gmail.com">mechasolution</maintainer>
  <license>Proprietary</license>
  <author email="max@mechasolution.com">Max Cha</author>

  <exec_depend>micro_ros_agent</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>a </export>
</package>