<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mechaship_yolov8</name>
  <version>0.1.0</version>
  <description>ROS 2 Package for YOLOv8 Detection and Visualization</description>
  <maintainer email="techms5499@gmail.com">mechasolution</maintainer>
  <license>Apache 2.0</license>
  <author email="sydney@mechasolution.com">Sydney Kim</author>

  <depend>rclpy</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
