<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mechaship_yolov8</name>
  <version>1.0.0</version>
  <description>ROS 2 package for YOLOv8 object detection and visualization.</description>
  <maintainer email="techms5499@gmail.com">mechasolution</maintainer>
  <license>Apache-2.0</license>
  <author email="sydney@mechasolution.com">Sydney Kim</author>

  <!-- Buildtool Dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Other ROS package dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>